# uruguay-stats

./: .gitignore  AGENTS.md  LICENSE  README.md  build_notebooks.py  pyproject.toml  test.py
.githooks/: pre-commit
abitab/: abitab.ipynb  plot.py
abitab/data/: 2015-10-11-locales_de_pago_descentralizado_en_montevideo.csv  2015-10-11-locales_de_pago_descentralizado_en_montevideo.txt  2016-06-30-locales-empresas-contratistas-montevideo.csv  2016-06-30-locales-empresas-contratistas-montevideo.txt  2020-04-24-copia-de-locales-pago-descentralizado-montevideo.csv  2020-04-24-copia-de-locales-pago-descentralizado-montevideo.txt  2025-07-07-listado-locales-pagos-descentralizados-montevideo-enviado.csv  2025-07-07-listado-locales-pagos-descentralizados-montevideo-enviado.txt  parse_adresses.py  sources.md
approval/: approval.ipynb  plot.py
approval/data/: new.csv  opuy.csv
budget/: budget.ipynb  plot.py
budget/data/: README.md  budget.csv  opp_1961_2010.csv  wb_exp_pct_gdp.csv  wb_gdp_const_usd.csv  wb_gdp_nominal_pesos.csv
bus/: bus.ipynb  plot.py
bus/data/: README.md  amdet-lineas.html  amdet-lineas.txt  categoria-lineas.html  categoria-lineas.txt  coetc.html  coetc.txt  come.html  come.txt  cutcsa.html  cutcsa.txt  download_lines.py  fuera.txt  lineas-cutcsa.html  lineas-cutcsa.txt  lines.csv  raincoop.html  raincoop.txt  stm.html  stm.txt  transporte-fuera-de-servicio.html  ucot.html  ucot.txt  urbanos-de-montevideo.html  urbanos.txt
electoral/: electoral.ipynb  plot.py
electoral/data/: vap.csv  (+5 more)
radios/: plot.py  radios.ipynb
shared/: stats.py  utils.py
(+415 files in other folders)
